# snnax

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py
content/: 000_intro.md  400_functions.md
content/100_gettingStarted/: 100_installation.md  101_structure.md
content/200_architecture/: 200_intro.md  201_composed.md  _category_.yml
content/300_layers/: 300_intro.md  301_predefined.md
docs/: 404.html  index.html  server.bundle.js  sitemap.xml
docs/functions/: index.html
docs/markdown-page/: index.html
docs_old/: conf.py  index.rst
examples/: gestures_bptt.py  randman_bptt.py  snnax_train_dvsgesture_multiloss.py  snnax_train_nmnist_mlp_multiloss.py  tutorial_DVS_gestures.ipynb  tutorial_Introduction.ipynb  tutorial_Recurrence.ipynb  utils.py
examples/benchmarks/: README.md  benchmark_datasets.py  data  requirements.txt  train_dataset_model.py  utils.py  utils_gradtools.py  utils_training.py
examples/parameters/: config_dvsgesture_multiloss_large.yaml  config_dvsgesture_multiloss_medium.yaml  config_dvsgesture_multiloss_mlp_small.yaml  config_dvsgesture_multiloss_small.yaml
src/snnax/: __init__.py
src/snnax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: .coverage  arch_test.py  architecture_test.py  composed_test.py  conftest.py  layer_test.py  recurrent_test.py  tree_test.py  tree_utils_test.py
website/: .pnp.cjs  README.md  docusaurus.config.js  package-lock.json  package.json
(+117 files in other folders)
